Change Log for OpenXava project
===============================

- Fix: Checkbox of boolean editor bad aligned.
- Fix: @OnChange in a reference not triggered on typing if the referenced model has a @SearchKey reference.
- Fix: Clearing a reference value does not fire the changed message on leaving the record.
- Invoicing archetypes include an initial database populated with sample data.
- Fix: The tree collapses when the dialog closes if idProperties of @Tree uses a property other than 'id'.
- Article in documentation about how to use project templates or archetypes.
- Lesson 7 of the reporting course with JasperReports available in the documentation with video.
- Fix: 'Open in new tab' row action does not work for lists annotated with @OrderColumn. 
- 'How to install' documentation improved to cover some tips to work with Mac.

OpenXava 7.4.2 (2024-10-25)
---------------------------
- New changeLast() in Strings utility class to change the last occurrence of a string inside another string.
- The error message in list format when the query fails is now red.
- Added reinit property to ReturnPreviousModuleAction to customize the initiation of the module on return.
- Some new common use labels to be used in applications.
- JasperReports and fonts upgraded to 6.21.4.
- Embedded Tomcat used in development upgraded to 9.0.96.
- Driver version in doc/new projects upgraded for MySQL and Firebird.
- Documentation in reference guide to manage programmatically files of @File/@Files/FILE/FILES properties.
- Fix: Using a permalink, it's possible to access a record not available in the list.
- Fix: AccessTracker sends all values for the key upon modification for @AsEmbedded references.
- Fix: Using qualified properties, ${this.someReference.someProperty}, in @SearchListCondition doesn't work.
- Fix: Errors in executing the query are not noticeable to the user in the calendar list format.